--- a/src/eepskye/src/modeledit.ui
+++ b/src/eepskye/src/modeledit.ui
@@ -54,7 +54,7 @@
    <item row="5" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>7</number>
+      <number>12</number>
      </property>
      <widget class="QWidget" name="tabModelSetup">
       <attribute name="title">
@@ -1148,7 +1148,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1164,7 +1164,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1180,7 +1180,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1196,7 +1196,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1212,7 +1212,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1228,7 +1228,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1244,7 +1244,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1260,7 +1260,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1276,7 +1276,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1292,7 +1292,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1308,7 +1308,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1324,7 +1324,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1340,7 +1340,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1356,7 +1356,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1372,7 +1372,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1388,7 +1388,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1404,7 +1404,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1420,7 +1420,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1436,7 +1436,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -1452,7 +1452,7 @@
            <bool>true</bool>
           </property>
           <property name="minimum">
-           <number></number>
+           <number>0</number>
           </property>
           <property name="maximum">
            <number>510</number>
@@ -10687,6 +10687,126 @@ Right</string>
          <width>121</width>
          <height>20</height>
         </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_161">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>270</y>
+         <width>47</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Panel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <property name="midLineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>GVAR6</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="margin">
+        <number>3</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_162">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>310</y>
+         <width>47</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Panel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+       <property name="midLineWidth">
+        <number>0</number>
+       </property>
+       <property name="text">
+        <string>GVAR7</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+       <property name="margin">
+        <number>3</number>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="Gvar6CB">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>270</y>
+         <width>121</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="Gvar7CB">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>310</y>
+         <width>121</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="Gv6SB">
+       <property name="geometry">
+        <rect>
+         <x>350</x>
+         <y>270</y>
+         <width>58</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="accelerated">
+        <bool>true</bool>
+       </property>
+       <property name="minimum">
+        <number>-125</number>
+       </property>
+       <property name="maximum">
+        <number>125</number>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="Gv7SB">
+       <property name="geometry">
+        <rect>
+         <x>350</x>
+         <y>310</y>
+         <width>58</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+       </property>
+       <property name="accelerated">
+        <bool>true</bool>
+       </property>
+       <property name="minimum">
+        <number>-125</number>
+       </property>
+       <property name="maximum">
+        <number>125</number>
        </property>
       </widget>
      </widget>
