--- a/src/serialdialog.ui
+++ b/src/serialdialog.ui
@@ -41,7 +41,7 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="1" colspan="4">
+   <item row="9" column="1" colspan="4">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -54,20 +54,10 @@
      </property>
     </spacer>
    </item>
-   <item row="7" column="6">
+   <item row="9" column="6">
     <widget class="QPushButton" name="cancelButton">
      <property name="text">
       <string>Cancel</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" colspan="5">
-    <widget class="QLineEdit" name="FileEdit"/>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Filename</string>
      </property>
     </widget>
    </item>
@@ -78,8 +68,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="4" column="1">
     <widget class="QTextBrowser" name="Name">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>23</height>
+      </size>
+     </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
@@ -94,47 +90,31 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="4" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Name</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="3">
-    <widget class="QTextBrowser" name="size">
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>23</height>
-      </size>
-     </property>
-     <property name="verticalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
-     </property>
-     <property name="horizontalScrollBarPolicy">
-      <enum>Qt::ScrollBarAlwaysOff</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
+   <item row="4" column="2">
     <widget class="QLabel" name="label_4">
      <property name="text">
       <string>Size</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1" colspan="4">
+   <item row="7" column="1" colspan="4">
     <widget class="QProgressBar" name="progressBar">
      <property name="value">
       <number>24</number>
      </property>
     </widget>
    </item>
-   <item row="6" column="1" colspan="5">
+   <item row="8" column="1" colspan="5">
     <widget class="QTextBrowser" name="monitorText"/>
    </item>
-   <item row="7" column="5">
+   <item row="9" column="5">
     <widget class="QPushButton" name="sendButton">
      <property name="maximumSize">
       <size>
@@ -150,7 +130,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="5">
+   <item row="7" column="5">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -162,6 +142,48 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="3" column="1" colspan="5">
+    <widget class="QLineEdit" name="FileEdit">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>23</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="5">
+    <widget class="QListWidget" name="fileList"/>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Filename</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="4" colspan="2">
+    <widget class="QTextBrowser" name="size">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>23</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>23</height>
+      </size>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
