--- a/trunk/src/serialdialog.ui
+++ b/trunk/src/serialdialog.ui
@@ -185,6 +185,16 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Files</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources>
