--- a/src/preferencesdialog.ui
+++ b/src/preferencesdialog.ui
@@ -125,6 +125,11 @@
        <string>er9x - 128 - FrSky</string>
       </property>
      </item>
+     <item>
+      <property name="text">
+       <string>er9x - 128 - Standard</string>
+      </property>
+     </item>
     </widget>
    </item>
    <item row="9" column="1">
